--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "alexpts/php-tools": "^3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.2"
+        "phpunit/phpunit": "^6.4"
     },
     "autoload": {
         "psr-0": {
